2006-03-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/wingdi.h  [WINVER >= 0x0500]
	(GRADIENT_FILL_*,*_EMBEDED): Included in Windows 2000 and later.
	Thanks to: David A. Capello <dacap at users dot sf dot net>

2006-03-05  Paul J. Lucas  <pauljlucas@users.sourceforge.net>

	* include/wininet.h (INTERNET_CONNECTED_INFO): Define structure.
	(INTERNET_STATE_*): Define flags.
	(INTERNET_OPTION_CONNECTED_STATE): Define constant.

2006-03-05  Chris Wilson  <chris+mingw@qwirx.com>

	* include/sddl.h: New file.

2006-02-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ddk/ntifs.h (FILE_ID_FULL_DIRECTORY_INFORMATION): Revert
	last change.
	Remove file level #pragma pack(push,4)/#pragma pop.

2006-02-19  Corinna Vinschen  <corinna@vinschen.de>

	* include/ddk/ntifs.h (FILE_ID_FULL_DIRECTORY_INFORMATION): Add filler
	value to force correct alignment.

2006-02-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (LPNMLVCACHEHINT): Correct spelling.
	Thanks to: Sebastian Pipping <hartwork at users dot sf dot net>
	(PNM_CACHEHINT): Add backward compatibilty define.
	(LPNM_CACHEHINT): Likewise.

2006-02-06  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shlobj.h (PathResolve): Fix typo in _WIN32_WINNT guard.

2006-02-06  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shlobj.h (PRF_VERIFYEXISTS, PRF_TRYPROGRAMEXTENSIONS,
	PRF_FIRSTDIRDEF, PRF_DONTFINDLNK): Define.
	* lib/shell32.def (PathResolve): Define.

2006-02-06  Christopher Faylor  <cgf@timesys.com>

	* include/shlobj.h (PathResolve): Fix typo.

2006-02-06  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shlobj.h (PathResolve): Define.
	(PRF_VERIFYEXISTS, PRF_TRYPROGRAMEXTENSIONS, PRF_FIRSTDIRDEF,
	PRF_DONTFINDLNK): Ditto.
	* lib/shell32.def (PathResolve): Define.

2006-02-04  Ron Lee  <ronl@users.sourceforge.net>

	* include/winnls.h: Remove stray end ';' from preprocessor defines.
