@@ -98,12 +98,18 @@ extern "C" {
 #define SFGAO_HASPROPSHEET	0x00000040L
 #define SFGAO_DROPTARGET	0x00000100L
 #define SFGAO_CAPABILITYMASK	0x00000177L
+#define SFGAO_ISSLOW            0x00004000L
 #define SFGAO_GHOSTED		0x00008000L
 #define SFGAO_LINK		0x00010000L
 #define SFGAO_SHARE		0x00020000L
 #define SFGAO_READONLY		0x00040000L
 #define SFGAO_HIDDEN		0x00080000L
-#define SFGAO_DISPLAYATTRMASK	0x000F0000L
+#define SFGAO_DISPLAYATTRMASK   (SFGAO_ISSLOW \
+				 | SFGAO_GHOSTED \
+				 | SFGAO_LINK \
+				 | SFGAO_SHARE \
+				 | SFGAO_READONLY \
+				 | SFGAO_HIDDEN)
 #define SFGAO_FILESYSANCESTOR	0x10000000L
 #define SFGAO_FOLDER		0x20000000L
 #define SFGAO_FILESYSTEM	0x40000000L
